--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
               <span class="ico-circle"><i class="ion-checkmark-round"></i></span>
             </div>
             <div class="counter-num">
-              <p class="counter">94</p>
+              <p class="counter">352</p>
               <span class="counter-text">WORKS COMPLETED</span>
             </div>
           </div>
@@ -280,7 +280,7 @@
               <span class="ico-circle"><i class="ion-ios-calendar-outline"></i></span>
             </div>
             <div class="counter-num">
-              <p class="counter">1.7</p>
+              <p class="counter">4+</p>
               <span class="counter-text">YEARS OF EXPERIENCE</span>
             </div>
           </div>
@@ -291,8 +291,8 @@
               <span class="ico-circle"><i class="ion-ios-people"></i></span>
             </div>
             <div class="counter-num">
-              <p class="counter">114</p>
-              <span class="counter-text">TOTAL CLIENTS</span>
+              <p class="counter">218</p>
+              <span class="counter-text">DIFFERENT CLIENTS</span>
             </div>
           </div>
         </div>
@@ -302,8 +302,8 @@
               <span class="ico-circle"><i class="ion-ribbon-a"></i></span>
             </div>
             <div class="counter-num">
-              <p class="counter">12</p>
-              <span class="counter-text">AWARD WON</span>
+              <p class="counter">19</p>
+              <span class="counter-text">AWARDS WON</span>
             </div>
           </div>
         </div>
